<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/method_Sign_in">

    <fragment
        android:id="@+id/enterEmail"
        android:name="com.example.space.register.EnterEmail"
        android:label="@string/Email"
        tools:layout="@layout/fragment_enter_email" >
        <action
            android:id="@+id/action_enterEmail_to_enterPassword"
            app:destination="@id/enterPassword"
            app:popUpTo="@id/enterPassword"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/enterPassword"
        android:name="com.example.space.register.EnterPassword"
        android:label="@string/Password"
        tools:layout="@layout/fragment_enter_password" >
        <action
            android:id="@+id/action_enterPassword_to_enterAge"
            app:destination="@id/enterAge"
            app:popUpTo="@id/enterAge"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/enterAge"
        android:name="com.example.space.register.EnterAge"
        android:label="@string/Birthday"
        tools:layout="@layout/fragment_enter_age" >
        <action
            android:id="@+id/action_enterAge_to_enterGender"
            app:destination="@id/enterGender"
            app:popUpTo="@id/enterGender"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/enterGender"
        android:name="com.example.space.register.EnterGender"
        android:label="@string/Gender"
        tools:layout="@layout/fragment_enter_gender" >
        <action
            android:id="@+id/action_enterGender_to_enterName"
            app:destination="@id/enterName"
            app:popUpTo="@id/enterName"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/enterName"
        android:name="com.example.space.register.EnterName"
        android:label="@string/Name"
        tools:layout="@layout/fragment_enter_name" />
    <fragment
        android:id="@+id/method_Sign_in"
        android:name="com.example.space.login.Method_Sign_in"
        android:label="fragment_method__sign_in"
        tools:layout="@layout/fragment_method__sign_in" >
        <action
            android:id="@+id/action_method_Sign_in_to_enterEmail"
            app:destination="@id/enterEmail" />
        <action
            android:id="@+id/action_method_Sign_in_to_sign_in"
            app:destination="@id/sign_in" />
    </fragment>
    <fragment
        android:id="@+id/sign_in"
        android:name="com.example.space.login.Sign_in"
        android:label="Sign in"
        tools:layout="@layout/fragment_sign_in" >
        <action
            android:id="@+id/action_sign_in_to_forgot_pass"
            app:destination="@id/forgot_pass" />
        <action
            android:id="@+id/action_sign_in_to_method_Sign_in"
            app:destination="@id/method_Sign_in"
            app:popUpTo="@id/method_Sign_in"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/forgot_pass"
        android:name="com.example.space.login.Forgot_pass"
        android:label="Forgot password"
        tools:layout="@layout/fragment_forgot_pass" >
        <action
            android:id="@+id/action_forgot_pass_to_sign_in"
            app:destination="@id/sign_in"
            app:popUpTo="@id/sign_in"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>